--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -463,10 +463,10 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     </div>
 												</div>
 												<div class="tab-pane" id="tab-treatment" role="tabpanel">
-													<form class="kt-margin-b-10">
+													<form class="kt-margin-b-5">
 		    											<div class="row justify-space-between">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+																<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_karyawan_treatment"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
 																		<i class="la la-calendar"></i>
@@ -474,17 +474,17 @@ License: You must have a valid license purchased only from themeforest(the above
 																</div>
 															</div>
 															<div class="col-lg-4 col-sm-6">
-			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+			    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_treatment">
 															</div>
 		    											</div>
 		    										</form>
 													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_treatment"></table>
 												</div>
 												<div class="tab-pane" id="tab-kehadiran" role="tabpanel">
-													<form class="kt-margin-b-10">
+													<form class="kt-margin-b-5">
 		    											<div class="row justify-space-between">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_karyawan_kehadiran"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
 																		<i class="la la-calendar"></i>
@@ -492,7 +492,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																</div>
 															</div>
 															<div class="col-lg-4 col-sm-6">
-			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+			    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_kehadiran">
 															</div>
 		    											</div>
 		    										</form>
@@ -512,28 +512,13 @@ License: You must have a valid license purchased only from themeforest(the above
 	    											</ul>
 	                                                <div class="tab-content">
 	    												<div class="tab-pane active" id="tab-sisa" role="tabpanel">
-															<form class="kt-margin-b-10">
-				    											<div class="row justify-space-between">
-																	<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																		<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
-																		<div class="input-group-append">
-																			<span class="input-group-text">
-																				<i class="la la-calendar"></i>
-																			</span>
-																		</div>
-																	</div>
-																	<div class="col-lg-4 col-sm-6">
-					    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
-																	</div>
-				    											</div>
-				    										</form>
 	                                                        <table class="table table-bordered table-hover table-checkable" id="table_karyawan_inventory_sisa"></table>
 	    												</div>
 	    												<div class="tab-pane" id="tab-penggunaan" role="tabpanel">
-															<form class="kt-margin-b-10">
+															<form class="kt-margin-b-5">
 				    											<div class="row justify-space-between">
 																	<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																		<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																		<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_karyawan_inventory_penggunaan"/>
 																		<div class="input-group-append">
 																			<span class="input-group-text">
 																				<i class="la la-calendar"></i>
@@ -541,17 +526,17 @@ License: You must have a valid license purchased only from themeforest(the above
 																		</div>
 																	</div>
 																	<div class="col-lg-4 col-sm-6">
-					    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+					    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_inventory_penggunaan">
 																	</div>
 				    											</div>
 				    										</form>
 	                                                        <table class="table table-bordered table-hover table-checkable" id="table_karyawan_inventory_penggunaan"></table>
 	    												</div>
 	    												<div class="tab-pane" id="tab-request" role="tabpanel">
-															<form class="kt-margin-b-10">
+															<form class="kt-margin-b-5">
 				    											<div class="row justify-space-between">
 																	<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																		<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																		<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="monthpicker_karyawan_inventory_request"/>
 																		<div class="input-group-append">
 																			<span class="input-group-text">
 																				<i class="la la-calendar"></i>
@@ -559,7 +544,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																		</div>
 																	</div>
 																	<div class="col-lg-4 col-sm-6">
-					    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+					    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_inventory_request">
 																	</div>
 				    											</div>
 				    										</form>
@@ -568,10 +553,10 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
 												</div>
 												<div class="tab-pane" id="tab-payroll" role="tabpanel">
-													<form class="kt-margin-b-10">
-		    											<div class="row">
+													<form class="kt-margin-b-5">
+		    											<div class="row justify-content-end">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																<input readonly type="text" class="form-control kt-input_month" name="start" placeholder="Pilih Bulan" data-col-index="1" id="kt_search_month"/>
+																<input readonly type="text" class="form-control kt-monthpicker" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_karyawan_payroll"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
 																		<i class="la la-calendar"></i>
