--- a/user_superadmin/hr_request_dayoff.html
+++ b/user_superadmin/hr_request_dayoff.html
@@ -361,6 +361,21 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
+											<form class="kt-margin-b-5">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_karyawan_dayoff"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
+													</div>
+													<div class="col-lg-4 col-sm-6">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_dayoff">
+													</div>
+    											</div>
+    										</form>
                                             <table class="table table-bordered table-hover table-checkable" id="table_karyawan_dayoff"></table>
 										</div>
 									</div>
