--- a/user_superadmin/hr_request_pinjaman.html
+++ b/user_superadmin/hr_request_pinjaman.html
@@ -356,11 +356,26 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Request Day-Off
+													Request Pinjaman
 												</h3>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
+											<form class="kt-margin-b-5">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_karyawan_pinjaman"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
+													</div>
+													<div class="col-lg-4 col-sm-6">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_pinjaman">
+													</div>
+    											</div>
+    										</form>
                                             <table class="table table-bordered table-hover table-checkable" id="table_karyawan_pinjaman"></table>
 										</div>
 									</div>
