--- a/user_superadmin/treatment_all.html
+++ b/user_superadmin/treatment_all.html
@@ -361,10 +361,10 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-											<form class="kt-margin-b-10">
+											<form class="kt-margin-b-5">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_treatment_paid"/>
 														<div class="input-group-append">
 															<span class="input-group-text">
 																<i class="la la-calendar"></i>
@@ -372,7 +372,7 @@ License: You must have a valid license purchased only from themeforest(the above
 														</div>
 													</div>
 													<div class="col-lg-4 col-sm-6">
-	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_treatment_paid">
 													</div>
     											</div>
     										</form>
